add_compile_options(-std=c++17)

add_executable(variant.main variant.cpp)
add_executable(hana.main hana.cpp)
add_executable(constexpr.main constexpr.cpp)
add_executable(constructor.main constructor.cpp)
add_executable(expr.main expr.cpp)
add_executable(quicksort.main quicksort.cpp)
add_executable(final.main final.cpp)
add_executable(lambada.main lambada.cpp)
add_executable(init.main init.cpp)
add_executable(template.main template.cpp)
add_executable(sharedptr.main sharedptr.cpp)
add_executable(vararg.main vararg.cpp)
add_executable(rpc.main rpc.cpp)
target_include_directories(rpc.main PUBLIC ../msgpack-c/include/)
add_executable(rwlock.main rwlock.cpp)
